Adding twitter sentiment analysis

--- a/Exploring Plot Tag Lines.ipynb
+++ b/Exploring Plot Tag Lines.ipynb
@@ -345,7 +345,7 @@
     "ax2.imshow(wordcloudTop250Grossing, aspect='auto')\n",
     "ax2.set_title('Top250Grossing')\n",
     "ax3.imshow(wordcloudTop250BudgetString, aspect='auto')\n",
-    "ax3.set_title('Top250BudgetString')\n",
+    "ax3.set_title('Top250Budget')\n",
     "plt.tight_layout()"
    ]
   },
