--- a/SantaGifts/Fun with Santa's gifts.ipynb
+++ b/SantaGifts/Fun with Santa's gifts.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To help Santa, I feel it would be good approach to first get a good estimate of the weight of each type of gift and once we have the estimate the problem kind of turns itself into kind of [Bin packing problem](https://en.wikipedia.org/wiki/Bin_packing_problem)\n",
+    "\n",
+    "As all the data is based on certain types of distribution, we can easily find the value points which correspond to certain cummulative probability. For this example I am taking 85% as the cummulative probability. \n",
+    "\n",
+    "One thing to note would that the weights of books follow Chi-Square distribution and so its PDF depends upon the degrees of freedom, which in this case would 1199,which is huge and most online calculaor dont calculate value for it, so for books we are gonna draw 10000 samples to get a good estimate of the 85% percent cummulative value."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 160,
    "metadata": {
     "collapsed": true
    },
@@ -16,216 +27,128 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>GiftId</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>horse_0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>horse_1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>horse_2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>horse_3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>horse_4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>horse_5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>horse_6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>horse_7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>horse_8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>horse_9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>horse_10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>horse_11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>horse_12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>horse_13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>horse_14</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      GiftId\n",
-       "0    horse_0\n",
-       "1    horse_1\n",
-       "2    horse_2\n",
-       "3    horse_3\n",
-       "4    horse_4\n",
-       "5    horse_5\n",
-       "6    horse_6\n",
-       "7    horse_7\n",
-       "8    horse_8\n",
-       "9    horse_9\n",
-       "10  horse_10\n",
-       "11  horse_11\n",
-       "12  horse_12\n",
-       "13  horse_13\n",
-       "14  horse_14"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "data = pd.read_csv('gifts.csv')\n",
-    "data.head(15)"
+    "Number of gifts of each type\n",
+    " - horse - 1000\n",
+    " - ball - 1100\n",
+    " - bike - 500\n",
+    " - train - 1000\n",
+    " - coal - 166\n",
+    " - book - 1200\n",
+    " - doll - 1000\n",
+    " - blocks - 1000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 171,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nhorse - 1000\\nball - 1099\\nbike - 500\\ntrain - 1000\\ncoal - 165\\nbook - 1200\\ndoll - 1000\\nblocks - 1000\\ngloves - 200\\n'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "horse = max(0, np.random.normal(5,2,1)[0])\n",
+    "samples = 100000\n",
+    "z_critical = 1.036433 ## For 85% cummulative probability\n",
     "\n",
-    "ball = max(0, 1 + np.random.normal(1,0.3,1)[0])\n",
+    "horse_est_weight = 5 + z_critical*(2)\n",
+    "ball_est_weight = 1 + z_critical*(0.3)\n",
+    "bike_est_weight = 20 + z_critical*(10)\n",
+    "train_est_weight = 10 + z_critical*(5)\n",
+    "coal_est_weight = 47*0.9455  ## Source: http://keisan.casio.com/exec/system/1180573227\n",
+    "doll_est_weight = 7.267 ## Source: http://keisan.casio.com/exec/system/1180573218\n",
+    "block_est_weight = 15.834 ## Source: http://www.math.uah.edu/stat/apps/SpecialCalculator.html\n",
+    "gloves_est_weight = 3 + 0.85\n",
+    "weights = [{'name':'horse', 'weight':horse_est_weight, 'quantity':1000}\n",
+    "          ,{'name':'ball', 'weight':ball_est_weight, 'quantity':1100}\n",
+    "          ,{'name':'bike', 'weight':bike_est_weight, 'quantity':500}\n",
+    "          ,{'name':'train', 'weight':train_est_weight, 'quantity':1000}\n",
+    "          ,{'name':'coal', 'weight':coal_est_weight, 'quantity':166}\n",
+    "          ,{'name':'doll', 'weight':doll_est_weight, 'quantity':1000}\n",
+    "          ,{'name':'blocks', 'weight':block_est_weight, 'quantity':1000}\n",
+    "          ,{'name':'gloves', 'weight':gloves_est_weight, 'quantity':200}]\n",
     "\n",
-    "bike = max(0, np.random.normal(20,10,1)[0])\n",
+    "'''from https://www.kaggle.com/wcukierski/santas-uncertain-bags/plotting-example-gift-weights '''\n",
+    "class book:\n",
+    "    def __init__(self, id):\n",
+    "        self.weight = np.random.chisquare(2,1)[0]\n",
+    "        self.name = 'book'\n",
     "\n",
-    "train = max(0, np.random.normal(10,5,1)[0])\n",
-    "\n",
-    "coal = 47 * np.random.beta(0.5,0.5,1)[0]\n",
-    "\n",
-    "book = np.random.chisquare(2,1)[0]\n",
-    "\n",
-    "doll = np.random.gamma(5,1,1)[0] #6.5\n",
-    "\n",
-    "block = np.random.triangular(5,10,20,1)[0]\n",
-    "\n",
-    "gloves = 3.0 + np.random.rand(1)[0] if np.random.rand(1) < 0.3 else np.random.rand(1)[0]\n",
-    "## Approach figure out the 80% mark for each of the distribution and then use it as conservative weight guess for each of the gift items\n",
-    "## One approach would be calculate 10000 sample from each distribution and then plot a cummulative relative frequency\n",
-    "## plot to get 85% cut-off. For Normal distribution use the z-statistic to confirm the values\n",
-    "'''\n",
-    "horse - 1000\n",
-    "ball - 1099\n",
-    "bike - 500\n",
-    "train - 1000\n",
-    "coal - 165\n",
-    "book - 1200\n",
-    "doll - 1000\n",
-    "blocks - 1000\n",
-    "gloves - 200\n",
-    "'''"
+    "books = np.histogram([book(x).weight for x in range(samples)], bins = 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have the histogram, lets convert the freqencies of the bin into cummulative relative frequencies."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 172,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.5758917583770167"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "max(0, np.random.normal(5,2,1)[0])"
+    "def calc_rela_freq_cummulative(hist):\n",
+    "    cummulative = 0\n",
+    "    rel_freq = []\n",
+    "    for val in hist[0]:\n",
+    "        freq = cummulative + float(val)/float(samples)\n",
+    "        cummulative = freq\n",
+    "        rel_freq.append(freq)\n",
+    "    return np.asarray(rel_freq)\n",
+    "\n",
+    "books = (calc_rela_freq_cummulative(books), books[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 173,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 0.7054596])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For books the value in the 85 percentile is 3.72972834472\n"
+     ]
     }
    ],
    "source": [
-    "np.random.rand(1)"
+    "def get_85_percentile(rel_hist):\n",
+    "    for i, x in enumerate(rel_hist[0]):\n",
+    "        if x > 0.845 and x < 0.855:\n",
+    "            return [i, i+1]\n",
+    "    print 'No Element found in that range'\n",
+    "    return [0, 0]\n",
+    "rel_arr = [books]\n",
+    "rel_arr_names = ['books']\n",
+    "book_est_weight = 0\n",
+    "for i, x in enumerate(rel_arr):\n",
+    "    book_est_weight = x[1][get_85_percentile(x)[1]]\n",
+    "    print 'For', rel_arr_names[i], 'the value in the 85 percentile is', book_est_weight"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 174,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "weights.append({'name':'book', 'weight':book_est_weight, 'quantity': 1200})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
    "metadata": {
     "collapsed": false
    },
@@ -233,16 +156,97 @@
     {
      "data": {
       "text/plain": [
-       "3.3135804639922419"
+       "[{'name': 'horse', 'quantity': 1000, 'weight': 7.072865999999999},\n",
+       " {'name': 'ball', 'quantity': 1100, 'weight': 1.3109299},\n",
+       " {'name': 'bike', 'quantity': 500, 'weight': 30.36433},\n",
+       " {'name': 'train', 'quantity': 1000, 'weight': 15.182165},\n",
+       " {'name': 'coal', 'quantity': 166, 'weight': 44.4385},\n",
+       " {'name': 'doll', 'quantity': 1000, 'weight': 7.267},\n",
+       " {'name': 'blocks', 'quantity': 1000, 'weight': 15.834},\n",
+       " {'name': 'gloves', 'quantity': 200, 'weight': 3.85},\n",
+       " {'name': 'book', 'quantity': 1200, 'weight': 3.7297283447159693}]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a[0]"
+    "weights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have a weight estimate for each of the gift, we can try and solve it in a way similar to bin packing problem."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "Weight_per_bag = 50\n",
+    "id_gifts = [0,0,0,0,0,0,0,0,0]\n",
+    "weights = sorted(weights, key=lambda obj: obj['weight'], reverse = True)\n",
+    "bags = 1000\n",
+    "bags_contain = []\n",
+    "total_weight = 0\n",
+    "for i in range(bags):\n",
+    "    weight_to_fill = Weight_per_bag\n",
+    "    bag_str = ''\n",
+    "    while weight_to_fill > 0:\n",
+    "        if(weight_to_fill < weights[8]['weight']):\n",
+    "            break;\n",
+    "        for j, gift in enumerate(weights):\n",
+    "            if (gift['quantity'] >= 1) and (weight_to_fill - gift['weight'] >= 0):\n",
+    "                bag_str += ' ' + gift['name'] + '_' + str(id_gifts[j]);\n",
+    "                total_weight += gift['weight']\n",
+    "                weight_to_fill = weight_to_fill - gift['weight'];\n",
+    "                id_gifts[j] += 1;\n",
+    "                gift['quantity'] -= 1;\n",
+    "    bags_contain.append(bag_str.strip())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"Santa_gifts.csv\", 'w') as f:\n",
+    "        f.write(\"Gifts\\n\")\n",
+    "        for i in bags_contain:\n",
+    "            f.write( i +'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "49596.267393174116"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_weight"
    ]
   },
   {
