A dump of commits

--- a/SantaGifts/Fun with Santa's gifts.ipynb
+++ b/SantaGifts/Fun with Santa's gifts.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 185,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 186,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 187,
    "metadata": {
     "collapsed": false
    },
@@ -116,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For books the value in the 85 percentile is 3.72972834472\n"
+      "For books the value in the 85 percentile is 6.013810486\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 188,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 189,
    "metadata": {
     "collapsed": false
    },
@@ -156,18 +156,17 @@
     {
      "data": {
       "text/plain": [
-       "[{'name': 'horse', 'quantity': 1000, 'weight': 7.072865999999999},\n",
-       " {'name': 'ball', 'quantity': 1100, 'weight': 1.3109299},\n",
-       " {'name': 'bike', 'quantity': 500, 'weight': 30.36433},\n",
-       " {'name': 'train', 'quantity': 1000, 'weight': 15.182165},\n",
-       " {'name': 'coal', 'quantity': 166, 'weight': 44.4385},\n",
-       " {'name': 'doll', 'quantity': 1000, 'weight': 7.267},\n",
-       " {'name': 'blocks', 'quantity': 1000, 'weight': 15.834},\n",
-       " {'name': 'gloves', 'quantity': 200, 'weight': 3.85},\n",
-       " {'name': 'book', 'quantity': 1200, 'weight': 3.7297283447159693}]"
+       "[{'name': 'horse', 'quantity': 1000, 'weight': 8.289705999999999},\n",
+       " {'name': 'ball', 'quantity': 1100, 'weight': 1.4934558999999998},\n",
+       " {'name': 'bike', 'quantity': 500, 'weight': 36.44853},\n",
+       " {'name': 'train', 'quantity': 1000, 'weight': 18.224265},\n",
+       " {'name': 'doll', 'quantity': 1000, 'weight': 9.15},\n",
+       " {'name': 'blocks', 'quantity': 1000, 'weight': 22.561},\n",
+       " {'name': 'gloves', 'quantity': 200, 'weight': 3.95},\n",
+       " {'name': 'book', 'quantity': 1200, 'weight': 6.0138104859986976}]"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 190,
    "metadata": {
     "collapsed": false
    },
@@ -215,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 193,
    "metadata": {
     "collapsed": false
    },
@@ -229,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 192,
    "metadata": {
     "collapsed": false
    },
@@ -237,16 +236,45 @@
     {
      "data": {
       "text/plain": [
-       "49596.267393174116"
+       "49452.9710400006"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "total_weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'bike', 'quantity': 0, 'weight': 36.44853},\n",
+       " {'name': 'blocks', 'quantity': 500, 'weight': 22.561},\n",
+       " {'name': 'train', 'quantity': 500, 'weight': 18.224265},\n",
+       " {'name': 'doll', 'quantity': 0, 'weight': 9.15},\n",
+       " {'name': 'horse', 'quantity': 1000, 'weight': 8.289705999999999},\n",
+       " {'name': 'book', 'quantity': 1200, 'weight': 6.0138104859986976},\n",
+       " {'name': 'gloves', 'quantity': 0, 'weight': 3.95},\n",
+       " {'name': 'ball', 'quantity': 500, 'weight': 1.4934558999999998}]"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights"
    ]
   },
   {
