updating the credit card analysis

--- a/CreditCardAnalysis/Fraud Detection.ipynb
+++ b/CreditCardAnalysis/Fraud Detection.ipynb
@@ -72,13 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "model = RandomForestClassifier(n_estimators = 500, max_depth = 8, max_features = 'sqrt')\n",
+    "model = RandomForestClassifier(n_estimators = 500, max_depth = 8, max_features = None)\n",
     "train_y = train.Class\n",
     "train_x = train.drop('Class', axis = 1)\n",
     "model.fit(train_x, train_y)\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -145,20 +145,22 @@
        "            n_estimators=10, n_jobs=1, oob_score=False, random_state=None,\n",
        "            verbose=0, warm_start=False),\n",
        "       fit_params={}, iid=True, n_jobs=1,\n",
-       "       param_grid={'n_estimators': (100, 500, 1000), 'max_depth': [7, 8]},\n",
+       "       param_grid={'n_estimators': (100, 500, 1000), 'max_depth': [7, 8, 9]},\n",
        "       pre_dispatch='2*n_jobs', refit=True, return_train_score=True,\n",
        "       scoring='roc_auc', verbose=0)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "param_grid = {'max_depth': range(7,9), 'n_estimators': (100, 500, 1000)}\n",
+    "train_y = train.Class\n",
+    "train_x = train.drop('Class', axis = 1)\n",
+    "param_grid = {'max_depth' : range(7, 10), 'n_estimators':(100, 500, 1000)}\n",
     "\n",
-    "grid = GridSearchCV(RandomForestClassifier(max_features='sqrt'),\n",
+    "grid = GridSearchCV(RandomForestClassifier(max_features = 'sqrt'),\n",
     "                    param_grid=param_grid, cv=5, scoring='roc_auc')\n",
     "grid.fit(train_x, train_y)"
    ]
@@ -172,7 +174,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'GridSearchCV' object has no attribute 'grid_results_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-ab208ec97a38>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgrid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrid_results_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'GridSearchCV' object has no attribute 'grid_results_'"
+     ]
+    }
+   ],
+   "source": [
+    "grid.grid_results_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['grid_SearchCV_max_features.pkl']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.externals import joblib\n",
+    "joblib.dump(grid, 'grid_SearchCV_estimators_depth.pkl') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -188,21 +236,18 @@
     {
      "data": {
       "text/plain": [
-       "[mean: 0.96946, std: 0.01332, params: {'n_estimators': 100, 'max_depth': 7},\n",
-       " mean: 0.97093, std: 0.01570, params: {'n_estimators': 500, 'max_depth': 7},\n",
-       " mean: 0.97184, std: 0.01460, params: {'n_estimators': 1000, 'max_depth': 7},\n",
-       " mean: 0.97223, std: 0.01573, params: {'n_estimators': 100, 'max_depth': 8},\n",
-       " mean: 0.97261, std: 0.01450, params: {'n_estimators': 500, 'max_depth': 8},\n",
-       " mean: 0.97253, std: 0.01542, params: {'n_estimators': 1000, 'max_depth': 8}]"
+       "[mean: 0.97482, std: 0.01242, params: {'max_features': None},\n",
+       " mean: 0.97192, std: 0.01508, params: {'max_features': 'log2'},\n",
+       " mean: 0.97478, std: 0.01354, params: {'max_features': 'sqrt'}]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grid.grid_scores_"
+    "grid.cv_results_"
    ]
   },
   {
