--- a/CreditCardAnalysis/Fraud Detection.ipynb
+++ b/CreditCardAnalysis/Fraud Detection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,10 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.metrics import roc_auc_score"
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "from sklearn.externals import joblib\n",
+    "import pickle"
    ]
   },
   {
@@ -113,141 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Its a good AUC_ROC. Lets see if we can make it even better with some parameter tuning"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import GridSearchCV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GridSearchCV(cv=5, error_score='raise',\n",
-       "       estimator=RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "            max_depth=None, max_features='sqrt', max_leaf_nodes=None,\n",
-       "            min_impurity_split=1e-07, min_samples_leaf=1,\n",
-       "            min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-       "            n_estimators=10, n_jobs=1, oob_score=False, random_state=None,\n",
-       "            verbose=0, warm_start=False),\n",
-       "       fit_params={}, iid=True, n_jobs=1,\n",
-       "       param_grid={'n_estimators': (100, 500, 1000), 'max_depth': [7, 8, 9]},\n",
-       "       pre_dispatch='2*n_jobs', refit=True, return_train_score=True,\n",
-       "       scoring='roc_auc', verbose=0)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_y = train.Class\n",
-    "train_x = train.drop('Class', axis = 1)\n",
-    "param_grid = {'max_depth' : range(7, 10), 'n_estimators':(100, 500, 1000)}\n",
-    "\n",
-    "grid = GridSearchCV(RandomForestClassifier(max_features = 'sqrt'),\n",
-    "                    param_grid=param_grid, cv=5, scoring='roc_auc')\n",
-    "grid.fit(train_x, train_y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ask in the comments about whether if u did the grid search with all the values does is consitutes as information leakage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'GridSearchCV' object has no attribute 'grid_results_'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-ab208ec97a38>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgrid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrid_results_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'GridSearchCV' object has no attribute 'grid_results_'"
-     ]
-    }
-   ],
-   "source": [
-    "grid.grid_results_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['grid_SearchCV_max_features.pkl']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.externals import joblib\n",
-    "joblib.dump(grid, 'grid_SearchCV_estimators_depth.pkl') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/shashankbhushan/anaconda2/lib/python2.7/site-packages/sklearn/model_selection/_search.py:662: DeprecationWarning: The grid_scores_ attribute was deprecated in version 0.18 in favor of the more elaborate cv_results_ attribute. The grid_scores_ attribute will not be available from 0.20\n",
-      "  DeprecationWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[mean: 0.97482, std: 0.01242, params: {'max_features': None},\n",
-       " mean: 0.97192, std: 0.01508, params: {'max_features': 'log2'},\n",
-       " mean: 0.97478, std: 0.01354, params: {'max_features': 'sqrt'}]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grid.cv_results_"
+    "The parameters n_estimators, max_depth and max_features have been tuned using Grid Search and Cross Validation"
    ]
   },
   {
