--- a/logisticRegression/Logistic Regression.ipynb
+++ b/logisticRegression/Logistic Regression.ipynb
@@ -40,13 +40,13 @@
     "$$\\theta_j :=\\theta_j +α \\frac{\\partial}{\\partial \\theta}J(\\theta)$$\n",
     "So basically in the equation above $J(\\theta)$ represents the function whose value we want to maximize, which in our case will be the likelihood value. So, likelihood can be written as \n",
     "$$P(y=1|x) = g(x)$$\n",
-    "$$P(y=0|x) = 1−g(x)$$\n",
+    "$$P(y=0|x) = 1 - g(x)$$\n",
     "\n",
     "It can be written more compactly as\n",
     "$$p(y | x) = (g(x))^{y} (1 − g(x))^{1−y}$$\n",
     "\n",
     "Before moving on, here’s a useful property of the derivative of the sigmoid function, which we write as g′:\n",
-    "$$g′(z) = \\frac{d}{dz} \\frac{1}{1+e^{−z}}$$\n",
+    "$$g'(z) = \\frac{d}{dz} \\frac{1}{1 + e^{−z}}$$\n",
     "$$ = \\frac{1}{(1 + e^{−z})^2}(e^{−z})$$\n",
     "$$ = \\frac{1}{(1 + e^{−z})}·(1 − \\frac{1}{(1 + e^{−z})} )$$\n",
     "$$ = g(z)(1 − g(z)).$$\n",
