--- a/logisticRegression/Logistic Regression.ipynb
+++ b/logisticRegression/Logistic Regression.ipynb
@@ -37,37 +37,37 @@
     "Intuitively it makes sense that if we were to somehow get the correct values for parameters a, b and c we in essence have would have the equation that can generate the population from which our given sample was drawn from. The question now becomes how do we learn these parameters. \n",
     "\n",
     "A common method to estimate the values of such parameters is to either try to maximize or minimize a given value. For Logistic regression we want to maximize the likelihood of the class assignment to be correct. A common way to do this is to gradually update the parameters in order to maxime the likelihood of the correct class, this method is called gradient ascent. General purpose gradient ascent equation looks like:\n",
-    "$$\\theta_j :=\\theta_j +α \\frac{\\partial}{\\partial \\theta}J(\\theta)$$\n",
+    "$$\\theta_j :=\\theta_j + \\alpha \\frac{\\partial}{\\partial \\theta}J(\\theta)$$\n",
     "So basically in the equation above $J(\\theta)$ represents the function whose value we want to maximize, which in our case will be the likelihood value. So, likelihood can be written as \n",
     "$$P(y=1|x) = g(x)$$\n",
     "$$P(y=0|x) = 1 - g(x)$$\n",
     "\n",
     "It can be written more compactly as\n",
-    "$$p(y | x) = (g(x))^{y} (1 − g(x))^{1−y}$$\n",
+    "$$p(y | x) = (g(x))^{y} (1 - g(x))^{1 - y}$$\n",
     "\n",
     "Before moving on, here’s a useful property of the derivative of the sigmoid function, which we write as g′:\n",
-    "$$g'(z) = \\frac{d}{dz} \\frac{1}{1 + e^{−z}}$$\n",
-    "$$ = \\frac{1}{(1 + e^{−z})^2}(e^{−z})$$\n",
-    "$$ = \\frac{1}{(1 + e^{−z})}·(1 − \\frac{1}{(1 + e^{−z})} )$$\n",
-    "$$ = g(z)(1 − g(z)).$$\n",
+    "$$g'(z) = \\frac{d}{dz} \\frac{1}{1 + e^{-z}}$$\n",
+    "$$ = \\frac{1}{(1 + e^{-z})^2}(e^{-z})$$\n",
+    "$$ = \\frac{1}{(1 + e^{-z})}·(1 - \\frac{1}{(1 + e^{-z})} )$$\n",
+    "$$ = g(z)(1 - g(z)).$$\n",
     "\n",
     "Lets now continue with the derivation, we can then write down the likelihood of the parameters as\n",
     "$$L(\\theta) = p(y|X;\\theta)$$\n",
     "$$\\prod_{1}^{m} p(y^{(i)} | x^{(i)}; \\theta)$$\n",
-    "$$\\prod_{1}^{m} g(x^{(i)})^{y^{(i)}}  1 − g(x^{(i)})^{1−y^{(i)}}$$\n",
+    "$$\\prod_{1}^{m} g(x^{(i)})^{y^{(i)}}  1 - g(x^{(i)})^{1-y^{(i)}}$$\n",
     "\n",
     "It will be easier now if try and maximize log likelihood instead of likehood\n",
     "$$l(\\theta) = log L(\\theta)$$\n",
-    "$$=\\sum_{i}^{m}y^{(i)} log g(x^{(i)}) + (1 − y^{(i)}) log(1 − g(x^{(i)}))$$\n",
+    "$$=\\sum_{i}^{m}y^{(i)} log g(x^{(i)}) + (1 - y^{(i)}) log(1 - g(x^{(i)}))$$\n",
     "\n",
     "lets now take the derivative to derive the gradient ascent rule\n",
-    "    $$\\frac{\\partial}{\\partial \\theta} l(\\theta) =  y\\frac{1}{g(\\theta^Tx)} −(1−y)(\\frac{1}{1 − g(\\theta^Tx)})\\frac{\\partial}{\\partial \\theta j}g(\\theta^Tx)$$\n",
-    "    $$ = (y\\frac{1}{g(\\theta^Tx)} −(1−y)\\frac{1}{(1−g(\\theta^Tx)})g(\\theta^Tx)(1 − g(\\theta^Tx))\\frac{\\partial}{\\partial \\theta j}\\theta^Tx $$\n",
-    "    $$ = (y(1−g(\\theta^Tx))−(1−y)g(\\theta^Tx))x_j$$\n",
-    "    $$ = (y−g(\\theta^Tx))x_j$$\n",
+    "    $$\\frac{\\partial}{\\partial \\theta} l(\\theta) =  y\\frac{1}{g(\\theta^Tx)} -(1-y)(\\frac{1}{1 - g(\\theta^Tx)})\\frac{\\partial}{\\partial \\theta j}g(\\theta^Tx)$$\n",
+    "    $$ = (y\\frac{1}{g(\\theta^Tx)} -(1-y)\\frac{1}{(1-g(\\theta^Tx)})g(\\theta^Tx)(1 - g(\\theta^Tx))\\frac{\\partial}{\\partial \\theta j}\\theta^Tx $$\n",
+    "    $$ = (y(1-g(\\theta^Tx))-(1-y)g(\\theta^Tx))x_j$$\n",
+    "    $$ = (y-g(\\theta^Tx))x_j$$\n",
     "\n",
     "Solving some mathematical formulas we get the following weight update equation:\n",
-    "$$ \\theta_j :=\\theta_j + \\alpha (y^{(i)} − g(x^{(i)})) x^{(j)}$$\n",
+    "$$ \\theta_j :=\\theta_j + \\alpha (y^{(i)} - g(x^{(i)})) x^{(j)}$$\n",
     " \n",
     "where $\\theta_j$ is the jth weight parameter and $y^{(i)}$ and $x^{(i)}$ represents the ith data sample. The full mathematical equation is worked below. \n",
     "\n",
