unknown character issue fixed

--- a/logisticRegression/Logistic Regression.ipynb
+++ b/logisticRegression/Logistic Regression.ipynb
@@ -48,7 +48,7 @@
     "Before moving on, here’s a useful property of the derivative of the sigmoid function, which we write as g′:\n",
     "$$g'(z) = \\frac{d}{dz} \\frac{1}{1 + e^{-z}}$$\n",
     "$$ = \\frac{1}{(1 + e^{-z})^2}(e^{-z})$$\n",
-    "$$ = \\frac{1}{(1 + e^{-z})}·(1 - \\frac{1}{(1 + e^{-z})} )$$\n",
+    "$$ = \\frac{1}{(1 + e^{-z})}.(1 - \\frac{1}{(1 + e^{-z})} )$$\n",
     "$$ = g(z)(1 - g(z)).$$\n",
     "\n",
     "Lets now continue with the derivation, we can then write down the likelihood of the parameters as\n",
