--- a/logisticRegression/Logistic Regression.ipynb
+++ b/logisticRegression/Logistic Regression.ipynb
@@ -30,8 +30,8 @@
     "![Sigmoid Function](SigmoidFunction.png)\n",
     "\n",
     "So basically this maps the values produced by the linear regression function between 0 and 1. So a logistic regression equation looks like the following:\n",
-    "$$g(z) = {\\frac{1}{1+e^{-h(x)}}}$$\n",
-    "where $h(x) = a*x_1 + b*x_2 + c$\n",
+    "$$g(z) = {\\frac{1}{1+e^{-h(z)}}}$$\n",
+    "where $h(z) = a*x_1 + b*x_2 + c$\n",
     "\n",
     "## How does it work\n",
     "Intuitively it makes sense that if we were to somehow get the correct values for parameters a, b and c we in essence have would have the equation that can generate the population from which our given sample was drawn from. The question now becomes how do we learn these parameters. \n",
